add jwt token authorization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=123
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create-drop
+
+#JWT hash secret
+jwt.secret=taskTracker
