--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,14 @@
             <version>0.9.1</version>
         </dependency>
 
+        <!--        maven plugin-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>2.3.4.RELEASE</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
